--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello World</title>
-    <link 
+    <title>Ola mundo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    
-  <header>
-     <h1>Hello Word</h1> 
-     <p>Bem vindo, que bom te ver por aqui....</p> 
-  </header>
-  <section>
-     <h2>HTML</h2> 
-     <p>Hypertext Markup Language (em português, Linguagem de
-         Marcação de...</p>
-          <img src=”imagem/Olá Mundo.png” alt=”texto alternativo” >
-         <h2>CSS</h2>
-     <img src=”imagem/Olá Mundo.png” alt="globo mundi, com o título Hello World"
-     <p>Cascading Style Sheets (em português, Folha de Estilo em
-      Cascata)...</p>
-  </section> 
-  <footer> 
-    <p>Uma página desenvolvida por Alura Start</p> 
-  </footer>
-
+    <header>
+        <h1>Hello World</h1>
+        <p>Que bom te ver por aqui, <span id="nome-usuario">Fulano</span></p>
+    </header>
+    <section>
+        <h2>HTML</h2>
+        <p>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</p>
+        <h2>CSS</h2>
+        <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web</p>
+        <img src=" ./imagem/Olá Mundo.png" alt="ilustração de uma planeta e um texto escrito: ola mundo">
+    </section>
+    <footer>
+        <p>Uma página desenvolvida por Alura Start</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
